syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.merkadoLivreGrpc.user";
option java_outer_classname = "MerkadoLivreGrpcUser";

package com.merkadoLivreGrpc.user;

service UserService {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  string message = 1;
}